# rcorels

./: .Rhistory  DESCRIPTION  LICENSE  Makefile  Makefile.am  Makefile.in  NAMESPACE  README  aclocal.m4  config.status  configure  configure.ac  libtool
R/: corels.R
autom4te.cache/: requests  traces.1
corels-1.0/: configure.ac
corels-1.0-BACKUP/: Makefile.in  aclocal.m4  configure
corels-1.0-BACKUP/src/: run.cc
corels-1.0-COMPILES/: Makefile  NAMESPACE  config.status
corels-1.0-COMPILES/autom4te.cache/: traces.0
corels-1.0-COMPILES/src/: evaluate-test.cc  utils.cc  utils.hh
corels-1.0-RBACKUP/: DESCRIPTION  configure.ac
corels-1.0-RBACKUP/R/: corels.R
corels-1.0-RBACKUP/autom4te.cache/: output.0  requests  traces.0
corels-1.0-RBACKUP/src/: cli.cc  main.cc  rule.h
corels-1.0/R/: corels.R
corels-1.0/autom4te.cache/: output.0
corels-1.0/src/: Makevars  Makevars.in  cache.cc  params.c  params.h  rcpp_module.cc  rule.h  rulelib.c  run.cc  run.hh  utils.hh
data/: compas.csv
inst/include/: gmp-i386.h  gmp-x64.h  gmp.h
man/: corels-package.Rd  get_data_feature_mat.Rd  predict.corels.Rd  print.corels.Rd  tictactoe.Rd  train.corels.Rd
src/: Makevars.in  Makevars.win  cache.hh  corels.cc  evaluate.cc  evaluate.hh  pmap.cc  pmap.hh  rcpp_module.cc  rule.h  rulelib.c  run.cc  run.hh  symbols.rds  utils.cc  utils.hh
